# multi-system

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/dev_docs/: README_Windows_Terminal_Fix.md
multi-system/system/: fonts.py
src/multi_system/: main.py  main_gui.py
src/multi_system/core/: __init__.py  data_manager.py
src/multi_system/environ/: envs.py
src/multi_system/files/: batch_rename.py  big_files.py  duplicate_files.py  file_link.py  file_watcher.py  unuse_files.py
src/multi_system/gui/: __init__.py  ai_toolbox_window.py  base_toolbox.py  dev_toolbox_window.py  file_toolbox_window.py  main_window.py  network_toolbox_window.py  package_toolbox_window.py  port_forward_window.py  port_forward_worker.py  registry.py  security_toolbox_window.py  shell_toolbox_window.py  system_toolbox_window.py
src/multi_system/gui/ai_tabs/: profile_tab.py  quick_switch_tab.py
src/multi_system/gui/dev_tabs/: cron_tab.py  env_var_tab.py  log_tab.py  ssh_key_tab.py
src/multi_system/gui/file_tabs/: big_file_tab.py  duplicate_tab.py  rename_tab.py  watcher_tab.py
src/multi_system/gui/network_tabs/: dns_tab.py  port_scan_tab.py  proxy_tab.py  speed_tab.py
src/multi_system/gui/package_tabs/: app_launcher_tab.py  package_tab.py
src/multi_system/gui/security_tabs/: file_audit_tab.py  firewall_tab.py  port_scan_tab.py
src/multi_system/gui/shell_tabs/: alias_tab.py  completions_tab.py  history_tab.py  migration_tab.py  prompt_tab.py  rc_manager_tab.py  startup_tab.py
src/multi_system/gui/system_tabs/: dashboard_tab.py  disk_tab.py  process_tab.py  startup_tab.py
src/multi_system/network/: __init__.py  dns_switcher.py  ntp_parser.py  ntp_servers.py  ntp_tester.py  port_forward.py  port_scanner.py  proxy_manager.py  speed_test.py
src/multi_system/path/: __init__.py  paths.py
src/multi_system/program/: cron_manager.py  env_var_manager.py  log_viewer.py  ssh_keys.py
src/multi_system/program/ai_models/: ai_config.py  claude_code.py  codex.py  hermes.py  model_switcher.py  openclaw.py  opencode.py
src/multi_system/software/terminal/windows_terminal/: fix_guid.py  path.py
src/multi_system/system/: __init__.py  envs.py  fonts.py  machine.py
src/multi_system/system/monitor/: __init__.py  dashboard.py  disk_usage.py  processes.py  startup_apps.py
src/multi_system/system/security/: file_audit.py  firewall.py
src/multi_system/system/shells/: __init__.py  aliases.py  completions.py  history.py  migration.py  prompt_themes.py  rc_manager.py  shell_base.py  startup.py
src/multi_system/system/windows/: uac.py
tests/: README.md
tests/unit/software/terminal/windows_terminal/: test_configs.py  test_fix_guid.py
