[project]
name = "multi-system"
description = "Multi-system is a Python package that provides tools for managing and interacting with multiple operating systems."
dynamic = ["version"]
# readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
multi_system = ["*.py", "**/*.py"]

[tool.setuptools.dynamic]
version = {attr = "multi_system.version.__version__"}

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
