# pip install -e .[dev,gui]

[project]
name = "multi-system"
version = "0.1.0"
description = "Multi-system information collection tool"
authors = [
  { name = "Haomin Kong", email = "a645162@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
keywords = ["multi-system", "system-info", "gui"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "psutil",
  "requests",
  "beautifulsoup4",
  "loguru",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "ty",
  "pre-commit",
]
gui = [
  "PySide6",
]

[project.scripts]
multi-system = "multi_system.main:main"

[project.urls]
Homepage = "https://github.com/a645162/multi-system"
Issues = "https://github.com/a645162/multi-system/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/multi_system"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20", "SIM"]
ignore = ["E501", "T201", "N802"]

[tool.ty]
src.include = ["multi_system/**"]

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
